# nusex

./: .editorconfig  .gitignore  .readthedocs.yml  CONTRIBUTING.md  MANIFEST.in  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-nox.txt  requirements-rtd.txt  requirements-test.txt  requirements.txt  setup.py
.github/: dependabot.yml
docs/: requirements.txt
nusex/: __init__.py  __main__.py  checks.py  cli.py  constants.py  errors.py  helpers.py  profile.py  template.py  ux.py
pipelines/: config.py  format.py  requirements-docs.txt  requirements-format.txt  requirements-safety.txt  requirements-tests.txt  safety.py  tests.py
templates/: simple_app.nsx  simple_pkg.nsx
tests/: __init__.py  test_000_setup.py  test_0_setup.py  test_101_config.py  test_101_profiles.py  test_102_profiles.py  test_1_config.py  test_1_profiles.py  test_1_spec.py  test_2_build.py  test_2_profiles.py  test_3_rename.py  (+12 more)
tests/data/testarosa/: LICENSE.txt  MANIFEST.in  README.md  README.txt  pyproject.toml  setup.cfg  setup.py
tests/data/testarosa/docs/: conf.py
tests/data/testarosa/setup/: token.0
tests/data/testarosa/testarosa/: __init__.py  errors.py
tests/data/testarosa_py/: CONTRIBUTING.md  MANIFEST.in  README.md  README.txt  ignoreme_too.rofl  pyproject.toml  requirements-test.txt  setup.cfg  setup.py
tests/data/testarosa_py/docs/source/: conf.py
tests/data/testarosa_py/ignorethisdir/: goodbye.everyone
tests/data/testarosa_py/setup/: config.1
tests/data/testarosa_py/testarosa_py/: __init__.py  error.py  errors.py
(+94 files in other folders)
