[tool.poetry]
name = "testarosa"
version = "0.5.3"
description = "My testing app."
license = "BSD-3-Clause"
authors = ["Barney The Dinosaur <purplebarney@ntl.com>"]
maintainers = ["Barney The Dinosaur <purplebarney@ntl.com>"]
homepage = "https://github.com/purplebarney/testarosa"
repository = "https://github.com/purplebarney/testarosa"
documentation = "https://testarosa.readthedocs.io/en/latest"

[tool.black]
extend-exclude = "testarosa/__init__.py"
line-length = 79
