[tool.poetry]
name = "testarosa_py"
version = "0.5.3"
description = "My testing app."
license = "BSD-3-Clause"
authors = ["Barney The Dinosaur <purplebarney@ntl.com>"]
maintainers = ["Barney The Dinosaur <purplebarney@ntl.com>"]
homepage = "https://github.com/purplebarney/testarosa_py"
repository = "https://github.com/purplebarney/testarosa_py"
documentation = "https://testarosa_py.readthedocs.io/en/latest"

[tool.black]
extend-exclude = "testarosa_py/__init__.py"
line-length = 79
